<resources>
    <string name="app_name">Throw Remote</string>

    <string name="title_activity_main">Throw Remote</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="title_activity_about">AboutActivity</string>

    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_help">Help</string>
    <string name="action_scan_qr">Scan QR Code</string>
    <string name="action_stream">Stream</string>

    <string name="hello_world">Hello World!</string>
    <string name="prompt">Press the QR button to begin</string>
    <string name="disconnected">Disconnected</string>
    <string name="zero_time">00:00:00</string>
</resources>
