<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="1"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_more_vert_24dp"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_scan"
        android:orderInCategory="2"
        android:title="@string/action_scan_qr"
        android:icon="@drawable/ic_qrcode_24dp"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_stream"
        android:orderInCategory="3"
        android:title="@string/action_stream"
        android:icon="@drawable/ic_video_collection_24dp"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_about"
        android:orderInCategory="4"
        android:title="@string/action_about"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_help"
        android:orderInCategory="5"
        android:title="@string/action_help"
        app:showAsAction="never" />

</menu>
